tests/neg/i17613b/importTry.scala
object importTry:

	trait ImTrait

	class ImClass